--- a/client/index.html
+++ b/client/index.html
@@ -56,15 +56,14 @@
     <script type="module" src="/src/main.tsx"></script>
     
     <!-- Service Worker 등록 -->
+    <!-- Service Worker 해제 (기존 캐시 문제 해결) -->
     <script>
       if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/sw.js')
-            .then(function(registration) {
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            }, function(err) {
-              console.log('ServiceWorker registration failed: ', err);
-            });
+        navigator.serviceWorker.getRegistrations().then(function(registrations) {
+          for(let registration of registrations) {
+            registration.unregister();
+            console.log('ServiceWorker unregistered');
+          }
         });
       }
     </script>
