--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
   <!-- iOS Safari 북마크 추가 유도 -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="application-name" content="낫띵메터스" />
-  <link rel="apple-touch-icon" href="/icon-180x180.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- iOS 전용 메타태그 추가 -->
   <meta name="mobile-web-app-capable" content="yes" />
