--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,15 @@
   <title>낫띵메터스 - 수제 쿠키 주문</title>
   <meta name="description" content="낫띵메터스 수제 쿠키 예약 주문 시스템. 브라우니, 포춘쿠키, 에어플레인 샌드위치 주문 가능" />
 
-  <!-- PWA 매니페스트 -->
-  <link rel="manifest" href="/manifest.json" />
+  <!-- PWA 매니페스트 - 동적으로 로드 -->
+  <script>
+    // 현재 경로에 따라 적절한 manifest를 로드
+    const currentPath = window.location.pathname;
+    const manifestLink = document.createElement('link');
+    manifestLink.rel = 'manifest';
+    manifestLink.href = `/api/manifest.json?startUrl=${encodeURIComponent(currentPath)}`;
+    document.head.appendChild(manifestLink);
+  </script>
 
   <!-- 앱 아이콘 -->
   <link rel="icon" type="image/png" sizes="512x512" href="/icon-512x512.png" />
